--- a/mobile/src/pages/home/home.html
+++ b/mobile/src/pages/home/home.html
@@ -15,7 +15,7 @@
 <ion-content padding>
   <h4>Formularios por Enviar</h4>
   <ion-list *ngIf="offline_forms">
-    <ion-item ion-item *ngFor="let f of offline_forms" (click)="openInstallation(f)">
+    <ion-item color="dark" ion-item *ngFor="let f of offline_forms" (click)="openInstallation(f)">
       <h2>Medidor {{f.uid}}</h2>
       <h3>{{f.calle}} {{f.numero}}, {{f.colonia}}. {{f.ciudad}}</h3>
       <p>{{f.uid | date: 'medium'}}</p>
@@ -24,7 +24,7 @@
   <hr />
   <h4>Formularios Enviados</h4>
   <ion-list *ngIf="user && user.forms">
-    <ion-item ion-item *ngFor="let f of user.forms" (click)="openInstallationSent(f.uid)">
+    <ion-item color="dark" ion-item *ngFor="let f of user.forms" (click)="openInstallationSent(f.uid)">
       <h2>Medidor {{f.uid}}</h2>
       <h3>{{f.calle}} {{f.numero}}, {{f.coloria}}. {{f.ciudad}}</h3>
       <p>{{f.uid | date: 'medium'}}</p>
