--- a/mobile/src/pages/login/login.html
+++ b/mobile/src/pages/login/login.html
@@ -1,9 +1,8 @@
 <ion-content padding class="backgroundAmsnImg bposy0">
+  <div class="center">
+    <img src="assets/imgs/logo_troy.png" />
+  </div>
   <ion-list>
-    <ion-item *ngIf="operation === 'register'">
-      <ion-label fixed>Nombre</ion-label>
-      <ion-input type="text" [(ngModel)]="name"></ion-input>
-    </ion-item>
     <ion-item>
       <ion-label fixed>Email</ion-label>
       <ion-input type="email" [(ngModel)]="email"></ion-input>
@@ -12,18 +11,8 @@
       <ion-label fixed>Password</ion-label>
       <ion-input type="password" [(ngModel)]="password"></ion-input>
     </ion-item>
-    <ion-item *ngIf="operation === 'register'">
-      <ion-label fixed>Repetir</ion-label>
-      <ion-input type="password" [(ngModel)]="password2"></ion-input>
-    </ion-item>
   </ion-list>
   <div padding>
-    <span *ngIf="operation === 'register'">Ya tienes cuenta? <a (click)="operation = 'login'"><b>Click Aquí</b></a></span>
-    <span *ngIf="operation === 'login'">Aun no tienes cuenta? <a (click)="operation = 'register'"><b>Click Aquí</b></a></span>
-    <hr />
     <button *ngIf="operation === 'login'" ion-button  (click)="loginWithEmail()" block>Ingresar</button>
-    <button *ngIf="operation === 'register'" ion-button (click)="registerWithEmail()" block>Registrarse</button>
-    <hr />
-    <button ion-button (click)="facebookAuth()" block>Ingresar con Facebook</button>
   </div>
 </ion-content>
