--- a/mobile/src/pages/fallidas/fallidas.html
+++ b/mobile/src/pages/fallidas/fallidas.html
@@ -20,5 +20,21 @@
 
 
 <ion-content padding>
-
+  <h4>Visitas Fallidas por Enviar</h4>
+  <ion-list *ngIf="offline_fallidas">
+    <ion-item color="dark" ion-item *ngFor="let f of offline_fallidas" (click)="openInstallation(f)">
+      <h2>Medidor {{f.uid}}</h2>
+      <h3>{{f.calle}} {{f.numero}}, {{f.colonia}}. {{f.ciudad}}</h3>
+      <p>{{f.uid | date: 'medium'}}</p>
+    </ion-item>
+  </ion-list>
+  <hr />
+  <h4>Visitas Fallidas Enviadas</h4>
+  <ion-list *ngIf="user && user.fallidas">
+    <ion-item color="dark" ion-item *ngFor="let f of user.fallidas" (click)="openInstallationSent(f.uid)">
+      <h2>Medidor {{f.uid}}</h2>
+      <h3>{{f.calle}} {{f.numero}}, {{f.coloria}}. {{f.ciudad}}</h3>
+      <p>{{f.uid | date: 'medium'}}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
