--- a/mobile/src/pages/fallidas/fallidas.html
+++ b/mobile/src/pages/fallidas/fallidas.html
@@ -22,10 +22,10 @@
 <ion-content padding>
   <h4>Visitas Fallidas por Enviar</h4>
   <ion-list *ngIf="offline_fallidas">
-    <ion-item color="dark" ion-item *ngFor="let f of offline_fallidas" (click)="openInstallation(f)">
-      <h2>Medidor {{f.uid}}</h2>
+    <ion-item ion-item *ngFor="let f of offline_fallidas" (click)="openFallidaOffline(f)">
+      <h2>Medidor {{f.medidor}}</h2>
       <h3>{{f.calle}} {{f.numero}}, {{f.colonia}}. {{f.ciudad}}</h3>
-      <p>{{f.uid | date: 'medium'}}</p>
+      <p>{{f.timestamp | date: 'medium'}}</p>
     </ion-item>
   </ion-list>
   <hr />
