--- a/mobile/src/pages/form-installation/form-installation.html
+++ b/mobile/src/pages/form-installation/form-installation.html
@@ -227,7 +227,7 @@
     <ion-grid>
       <ion-row>
         <ion-col col-4>
-          <button ion-button full color="primary" (click)="getFirmaTroy()">Firma Contratista</button>
+          <button ion-button full color="primary" (click)="getFirmaTroy()">Firma Troy</button>
         </ion-col>
         <ion-col col-4>
           <button ion-button full color="light" (click)="drawClear()">Limpiar</button>
