better ui for material on app

--- a/mobile/src/pages/form-installation/form-installation.html
+++ b/mobile/src/pages/form-installation/form-installation.html
@@ -182,10 +182,12 @@
       </ion-col>
     </ion-row>
     <h5 class="center">Agregar Materiales</h5>
-    <ion-row *ngFor="let m of materials">
-      <ion-col><ion-input placeholder="0" [(ngModel)]="m.current_quantity" type="number"></ion-input></ion-col>
-      <ion-col col-8>({{m.unidad}}) {{m.descripcion}}</ion-col>
-    </ion-row>
+    <div id="materialList">
+      <ion-row *ngFor="let m of materials">
+        <ion-col><ion-input placeholder="0" class="materialInput2" [(ngModel)]="m.current_quantity" type="number"></ion-input></ion-col>
+        <ion-col col-8>({{m.unidad}}) {{m.descripcion}}</ion-col>
+      </ion-row>
+    </div>
   </ion-grid>
 
   <ion-grid *ngIf="step === 4">
