--- a/mobile/src/pages/form-installation/form-installation.html
+++ b/mobile/src/pages/form-installation/form-installation.html
@@ -200,12 +200,12 @@
     </div>
   </ion-grid>
 
-  <ion-grid *ngIf="step === 4">
+  <!--<ion-grid *ngIf="step === 4">
     <div #map id="map"></div>
     <b *ngIf="form.geolocation">{{form.geolocation.lat}}, {{form.geolocation.lng}}</b>
-  </ion-grid>
+  </ion-grid>-->
 
-  <ion-grid *ngIf="step === 5">
+  <ion-grid *ngIf="step === 4">
     <ion-grid>
       <ion-row>
         <ion-col>
@@ -223,7 +223,7 @@
     </div>
   </ion-grid>
 
-  <ion-grid *ngIf="step === 6">
+  <ion-grid *ngIf="step === 5">
     <signature-pad [options]="signaturePadOptions"  id="signatureCanvas"></signature-pad>
     <ion-grid>
       <ion-row>
